Fix for default header on small screens

--- a/assets/stylesheets/_layout/_header.scss
+++ b/assets/stylesheets/_layout/_header.scss
@@ -88,9 +88,11 @@
 
 // Navigation
 
-.home__navigation {
-  @media #{$small-only} {
-    margin-bottom: 1.4rem;
+.header__navigation {
+  .home & {
+    @media #{$small-only} {
+      margin-bottom: 1.4rem;
+    }
   }
 
   > ul {
@@ -194,7 +196,7 @@
   > ul {
     display: grid;
     grid-column-gap: 1.6rem;
-    grid-template-columns: repeat(auto-fill, minmax(220px, 1fr));
+    grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
     padding-bottom: 1rem;
   }
 
